# mqttproject

./: .gitignore  MANUAL.md  README.md
laite/: CMakeLists.txt  actions.go  api.go  compile.sh  config.go  device.go  devices.toml  devices.toml.template  go.mod  go.sum  main.go  meson.build  networking.go  registration.go  tests.go
laite/headers/: coffee.hpp  device.h  device.hpp  mqtt_client.h  mqtt_client.hpp
laite/src/: coffee.cpp  device.cpp  main.cpp  mqtt_client.cpp
palvelin/: main.js  package-lock.json  package.json
server/: package-lock.json
simulator/: actions.go  api.go  compile.sh  config.go  device.go  go.mod  go.sum  main.go
